2A/05_Projet_GL/src/test/deca/context/valid/complet/37_assign_param_sous_classe.deca
// Description :
// Test valide contextulle
// Resultats :
//    Arbre avec décoration 
// Historique : 
//  cree le 18/01/2024

class A {
    void init(Object o , A a , B b) {
        o = new A();
        a = new B();
        b = null ;
    }
}


class B extends A {

}